# SDIZO2

./: .gitignore  CMakeLists.txt  main.cpp
Files/: test.txt  test2.txt  test3.txt  test4.txt
Files/Output/: test_Bellman_List.txt  test_Bellman_Matrix.txt  test_Dijkstra_Matrix.txt  test_Kruskal_List.txt  test_Kruskal_Matrix.txt  test_Prima.txt  test_Prima_List.txt  test_Prima_Matrix.txt
Graphs/: AdjacencyList.cpp  AdjacencyList.h  AdjacencyMatrix.cpp  AdjacencyMatrix.h  Edge.cpp  Edge.h  ListElement.cpp  ListElement.h
Menu/: Menu.cpp  Menu.h
Tools/: CostAndPrevElement.cpp  CostAndPrevElement.h  FileClass.cpp  FileClass.h  Generator.cpp  Heap.cpp  Heap.h  HeapSSSP.cpp  HeapSSSP.h  HeapSSSPelement.cpp  HeapSSSPelement.h  Set.cpp  Set.h  SetNode.cpp  SetNode.h
